Fixed gallery alignment

--- a/gallery.css
+++ b/gallery.css
@@ -1,9 +1,9 @@
-/* * {
+* {
     Box-sizing: border-box;
     margin: 0;
     padding: 0;
     color: black;
-} */
+}
 
 ul {
     list-style: none;
@@ -22,15 +22,15 @@ a {
 }
 
 nav {
-    display: block;
-    background-color: black;
-    border-bottom: 1px solid grey;
-    width: 100%;
-    height: 50px;
-    position: fixed;
-    overflow: hidden;
-    top: 0;
-    z-index: +1;
+  display: block;
+  background-color: black;
+  border-bottom: 1px solid grey;
+  width: 100%;
+  height: 50px;
+  position: fixed;
+  overflow: hidden;
+  top: 0;
+  z-index: +1;
 }
     
 body {
@@ -120,7 +120,7 @@ footer {
   text-align: center;
   padding-top: 5px;
   width: 100%;
-  bottom: 0px;
+  bottom: 0;
 }
 
 .FooterLogo {
